tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/integer/leading-zero-3.stderr
TOML parse error at line 1, column 19
  |
1 | leading-zero-3 = 0_0
  |                   ^
expected newline, `#`
